--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Leaflet -->
+   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚕</text></svg>">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -15,7 +16,7 @@
 <body>
   <header>
     <h1>Urban Mobility Data Explorer</h1>
-    <p class="subtitle">NYC Taxi – Interactive dashboard connected to your API</p>
+    <p class="subtitle">NYC Taxi – Interactive dashboard</p>
   </header>
 
   <main>
@@ -126,6 +127,6 @@
     <small>© Urban Mobility Data Explorer</small>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="js/api.js"></script>
 </body>
 </html>
