--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Leaflet -->
-   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚕</text></svg>">
+      <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚕</text></svg>">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -63,7 +63,7 @@
     </section>
 
     <section class="panel">
-      <h2>KPIs</h2>
+      <h2>Key Perfomance Indicators</h2>
       <div class="kpi-grid" id="kpiGrid">
         <div class="kpi"><div class="kpi-label">Total Rows</div><div class="kpi-value" id="kpiTotal">—</div></div>
         <div class="kpi"><div class="kpi-label">Avg Speed (km/h)</div><div class="kpi-value" id="kpiAvgSpeed">—</div></div>
