updated the schema file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1>Urban Mobility Data Explorer</h1>
-    <p class="subtitle">NYC Taxi – Interactive dashboard</p>
+    <p class="subtitle">NYC Taxi  Interactive dashboard</p>
   </header>
 
   <main>
